backend-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: backend-service
 namespace: my-first-namespace
 labels:
   app: backend-app
spec:
 selector:     
   app: backend-app
 ports:
   - port: 8000
