frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: frontend-service
 namespace: my-first-namespace
 labels:
   app: frontend-app
spec:
 selector:     
   app: frontend-app
 ports:
   - port: 8000
