services.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 labels:
   app: nginx
spec:
 selector:     
   app: nginx
 ports:
   - port: 80
