frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: frontend-ingress
 annotations:
   rewrite-target: /
spec:
 rules:
  - http:    
     paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8000
